--- a/OneDrive - MARVAL S.A/00 Extractor de datos Facturas/DocuMarval/render.yaml
+++ b/OneDrive - MARVAL S.A/00 Extractor de datos Facturas/DocuMarval/render.yaml
@@ -3,7 +3,7 @@ services:
     name: documarval
     env: python
     plan: starter
-    buildCommand: pip install --upgrade pip setuptools wheel && pip install -r requirements.txt
+    buildCommand: pip install --upgrade pip setuptools wheel && pip install --only-binary :all: Pillow || pip install Pillow==10.3.0 && pip install -r requirements.txt
     startCommand: streamlit run lectorFacturas.py --server.port=$PORT --server.address=0.0.0.0 --server.headless=true
     envVars:
       - key: GEMINI_API_KEY
