--- a/OneDrive - MARVAL S.A/00 Extractor de datos Facturas/DocuMarval/requirements.txt
+++ b/OneDrive - MARVAL S.A/00 Extractor de datos Facturas/DocuMarval/requirements.txt
@@ -1,7 +1,7 @@
 streamlit==1.31.0
 google-generativeai==0.3.2
 pdf2image==1.16.3
-Pillow==10.3.0
+Pillow>=10.3.0
 pandas==2.2.0
 openpyxl==3.1.2
 python-dotenv==1.0.0
