Configuración para despliegue en Streamlit Cloud - Mejoras en detección de Poppler y documentación completa

--- a/OneDrive - MARVAL S.A/00 Extractor de datos Facturas/DocuMarval/.gitignore
+++ b/OneDrive - MARVAL S.A/00 Extractor de datos Facturas/DocuMarval/.gitignore
@@ -11,6 +11,9 @@ ENV/
 
 # Streamlit
 .streamlit/secrets.toml
+.streamlit/config.toml
+# Pero permitir el ejemplo
+!.streamlit/config.toml.example
 
 # Environment variables
 .env
